# OptimalDrone

./: CMakeLists.txt  README.md  rough_design_doc.txt
inc/: AnalyzePermutation.hpp  DefaultConfig.hpp  Drone.hpp  GeneratePermutations.hpp
inc/Metric/: MetricInterface.hpp  StaticThrust.hpp  TotalCost.hpp  TotalMass.hpp  utils.hpp
inc/Part/: Battery.hpp  ElectronicSpeedController.hpp  FlightController.hpp  Frame.hpp  Kit.hpp  Motor.hpp  PartInterface.hpp  PartTypes.h  PowerDistributionBoard.hpp  Propeller.hpp
res/: README.md
src/: AnalyzePermutation.cpp  DefaultConfig.cpp  Drone.cpp  GeneratePermutations.cpp
src/Metric/: MetricInterface.cpp  StaticThrust.cpp  TotalCost.cpp  TotalMass.cpp  utils.cpp
src/Part/: Battery.cpp  ElectronicSpeedController.cpp  FlightController.cpp  Frame.cpp  Kit.cpp  Motor.cpp  PartInterface.cpp  PowerDistributionBoard.cpp  Propeller.cpp
test/: TestGenerate.cpp  TestPopulate.cpp
